--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: 
+title: Introduction to hashes in Ruby
 header-img: img/home-bg.png
 email: marin.cabac@gmail.com
 copyright_name: marin-cabac
 description: > # this means to ignore newlines until "baseurl:"
-  
+   Rubber Duck Debugging
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  marin-cabac
